--- a/ProftaakPeriode4/ProftaakPeriode4/ProftaakPeriode4.vcxproj
+++ b/ProftaakPeriode4/ProftaakPeriode4/ProftaakPeriode4.vcxproj
@@ -146,22 +146,34 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="GUIComponent.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Lanes.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="Vec.cpp" />
     <ClCompile Include="View.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Component.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GUIComponent.h" />
+    <ClInclude Include="GUIElement.h" />
     <ClInclude Include="Lanes.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="Vec.h" />
     <ClInclude Include="View.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Button.psd" />
+    <None Include="Assets\GUI-Design.psd" />
+    <None Include="Assets\LifeBar.psd" />
+    <None Include="Assets\LifeFrame.psd" />
+    <None Include="Assets\LifeFrameSegment.psd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
