--- a/ProftaakPeriode4/ProftaakPeriode4/ProftaakPeriode4.vcxproj.filters
+++ b/ProftaakPeriode4/ProftaakPeriode4/ProftaakPeriode4.vcxproj.filters
@@ -144,6 +144,12 @@
     <ClCompile Include="MeshFactory.cpp">
       <Filter>Source Files\Factory</Filter>
     </ClCompile>
+    <ClCompile Include="Image.cpp">
+      <Filter>Source Files\Components\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="LifeBar.cpp">
+      <Filter>Source Files\Components\GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="View.h">
@@ -212,6 +218,12 @@
     <ClInclude Include="json.hpp">
       <Filter>Header Files\Json</Filter>
     </ClInclude>
+    <ClInclude Include="Image.h">
+      <Filter>Header Files\Components\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="LifeBar.h">
+      <Filter>Header Files\Components\GUI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Button.psd">
@@ -227,6 +239,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Assets\LifeFrameSegment.psd">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\LifeFrameBackground.psd">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
